# nciraspw

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CITATION.cff  README.ipynb  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: coverage.yaml  tests.yaml
nciraspw/: __init__.py  files.py  layout.py  ras_pw_graph.py  read_data.py
nciraspw/ras_pw_data/: __init__.py  ras-pathway-gene-names.csv  ras-pathway-gene-names_custom.csv  ras-pathway-gene-names_custom.xlsx  ras-pathway-group-interactions.csv  ras-pathway-group-interactions.xlsx  ras-pathway-node-groups.csv  ras-pathway-node-groups.xlsx  ras-pathway-protein-complexes.txt  ~$ras-pw-edge-list.xlsx
tests/: test_files.py  test_layout.py  test_ras_pw_graph.py  test_read_data.py
